Login and ChatList done

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -10,10 +10,17 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.custom-scrollbar::-webkit-scrollbar{
+  height: 8px !important;
+  width: 8px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb{
+  background-color: #ffffff3b;
+}
+
 ::-webkit-scrollbar{
   display: none;
 }
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
